# oqi

./: .gitignore  CLAUDE.md  Cargo.toml
.github/workflows/: pages.yml
classical/: Cargo.toml
classical/src/: array.rs  array_ref.rs  bitreg.rs  complex.rs  duration.rs  error.rs  float.rs  index.rs  lib.rs  primitive.rs  scalar.rs  shared.rs  value.rs
classical/src/ops/: add.rs  arccos.rs  arcsin.rs  arctan.rs  bitand.rs  bitnot.rs  bitor.rs  bitxor.rs  ceiling.rs  concat.rs  cos.rs  div.rs  eq.rs  exp.rs  floor.rs  gt.rs  gte.rs  imag.rs  log.rs  logand.rs  lognot.rs  logor.rs  lt.rs  lte.rs  mod.rs  mul.rs  neg.rs  neq.rs  popcount.rs  pow.rs  real.rs  rem.rs  rotl.rs  rotr.rs  shl.rs  shr.rs  sin.rs  sizeof.rs  sizeof_dim.rs  sqrt.rs  (+2 more)
cli/: Cargo.toml
cli/src/: main.rs
compile/: Cargo.toml
compile/src/: cfg.rs  classical.rs  diagnostic.rs  display.rs  duration.rs  error.rs  lib.rs  lower.rs  openpulse.rs  qubits.rs  resolve.rs  scope.rs  sir.rs  ssa.rs  symbol.rs  types.rs  value.rs
compile/src/bytecode/: analysis.rs  binary.rs  disasm.rs  emit.rs  mod.rs  phi_elim.rs  regalloc.rs  types.rs
compile/src/duration/: stretch.rs
compile/src/lower/: gate.rs  mod.rs
compile/tests/: cfg.rs  fixtures.rs
diagnostics/: Cargo.toml
diagnostics/src/: lib.rs
docs/: SUMMARY.md
fixtures/lexer/: adder.json  alignment.json  arrays.json  cphase.json  dd.json  defcal.json  gateteleport.json  inverseqft1.json  inverseqft2.json  ipe.json  msd.json  qec.json  qft.json  qpt.json  rb.json  rus.json  scqec.json  t1.json  teleport.json  varteleport.json  vqe.json
fixtures/parser/: adder.json  alignment.json  arrays.json  cphase.json  dd.json  defcal.json  gateteleport.json  inverseqft1.json  inverseqft2.json  ipe.json  msd.json  qec.json  qft.json  qpt.json  rb.json  rus.json  scqec.json  t1.json  teleport.json  varteleport.json  vqe.json
fixtures/qasm/: arrays.qasm  cphase.qasm  dd.qasm  defcal.qasm  msd.qasm  t1.qasm  varteleport.qasm
format/: Cargo.toml
format/src/: lib.rs  utils.rs
format/tests/: fixtures.rs
js/: Cargo.toml
js/src/: lib.rs
js/tests/: wasm.rs
lex/: Cargo.toml
lex/src/: error.rs  lib.rs  span.rs  token.rs
lex/tests/: fixtures.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  token.rs
lexer/tests/: fixtures.rs
openpulse/: Cargo.toml
openpulse/src/: lib.rs
parse/: Cargo.toml
parse/src/: ast.rs  lib.rs
parse/tests/: fixtures.rs
parser/: Cargo.toml
parser/src/: ast.rs  lib.rs
parser/tests/: fixtures.rs
plan/: CAST.md  PLAN.md
playground/: README.md  index.html  package-lock.json  package.json  vite.config.ts
playground/src/: App.tsx  Histogram.tsx  InputsPane.tsx  ResultsPane.tsx  SourceEditor.tsx  Toolbar.tsx  examples.ts  qasm.ts  runner.ts  styles.css  worker.ts
py/: Cargo.toml  pyproject.toml
py/src/: lib.rs
py/tests/: test_oqi.py
quantum/: Cargo.toml
quantum/src/: lib.rs
scripts/: generate_lexer_fixtures.py  generate_parser_fixtures.py
scripts/antlr_generated/: qasm3Lexer.interp  qasm3Lexer.py  qasm3Parser.interp  qasm3Parser.py  qasm3ParserListener.py
vm/: Cargo.toml
vm/benches/: backends.rs
vm/src/: auto.rs  backend.rs  cal.rs  ch.rs  clifford.rs  diagnostic.rs  error.rs  extern_fns.rs  gpu.rs  lib.rs  sim.rs  sim_simd.rs  stabilizer.rs  sum.rs  vm.rs
vm/tests/: cal.rs  run.rs
