[package]
name = "oqi-classical"
version = "0.1.0"
edition = "2024"

[dependencies]
num-complex = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
paste = "1.0"
serde = { version = "1", features = ["derive", "rc"] }
turns = { version = "0.1.2", features = ["serde"] }

[dev-dependencies]
postcard = { version = "1", features = ["alloc"] }
