[package]
name = "oqi-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oqi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
oqi-compile = { path = "../compile" }
oqi-diagnostics = { path = "../diagnostics" }
oqi-format = { path = "../format" }
oqi-vm = { path = "../vm" }
rayon = "1"
