[package]
name = "oqi-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "oqi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
oqi-compile = { path = "../compile" }
oqi-diagnostics = { path = "../diagnostics" }
oqi-format = { path = "../format" }
oqi-vm = { path = "../vm" }
rayon = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
gpu = ["oqi-vm/gpu"]
