[package]
name = "oqi-compile"
version = "0.1.0"
edition = "2024"

[dependencies]
oqi-lex = { path = "../lex" }
oqi-parse = { path = "../parse" }
oqi-diagnostics = { path = "../diagnostics" }
oqi-classical = { path = "../classical" }
oqi-openpulse = { path = "../openpulse" }
oqi-quantum = { path = "../quantum", default-features = false }
awint = "0.18"
num-traits = "0.2.19"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
