[package]
name = "oqi-js"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
js-sys = "0.3"
oqi-compile = { path = "../compile" }
oqi-diagnostics = { path = "../diagnostics" }
oqi-vm = { path = "../vm", default-features = false }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
serde_json = "1"
wasm-bindgen-test = "0.3"
