[package]
name = "oqi-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "oqi_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
oqi-compile = { path = "../compile" }
oqi-diagnostics = { path = "../diagnostics" }
oqi-vm = { path = "../vm", default-features = false }
num-complex = "0.4"
pollster = "0.4"
pyo3 = { version = "0.29", features = ["abi3-py310", "num-complex"] }

[features]
default = []
extension-module = ["pyo3/extension-module"]
