[build-system]
requires = ["maturin>=1.14,<2"]
build-backend = "maturin"

[project]
name = "oqi-py"
version = "0.1.0"
description = "Python bindings for the oqi OpenQASM 3 compiler and state-vector simulator"
requires-python = ">=3.10"

[tool.maturin]
module-name = "oqi"
features = ["extension-module"]
