[package]
name = "oqi-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
oqi-compile = { path = "../compile" }
oqi-classical = { path = "../classical" }
oqi-quantum = { path = "../quantum" }
oqi-lex = { path = "../lex" }
oqi-diagnostics = { path = "../diagnostics" }
num-complex = "0.4"
num-traits = "0.2"

[features]
default = ["parallel"]
parallel = ["oqi-quantum/parallel"]
