[package]
name = "oqi-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
oqi-compile = { path = "../compile" }
oqi-classical = { path = "../classical" }
oqi-quantum = { path = "../quantum" }
oqi-lex = { path = "../lex" }
oqi-diagnostics = { path = "../diagnostics" }
num-complex = "0.4"
num-traits = "0.2"
wide = "0.7"
rayon = { version = "1", optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon", "oqi-quantum/parallel"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "backends"
harness = false
