[package]
name = "oqi-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
oqi-compile = { path = "../compile" }
oqi-classical = { path = "../classical" }
oqi-quantum = { path = "../quantum" }
oqi-lex = { path = "../lex" }
oqi-diagnostics = { path = "../diagnostics" }
num-complex = "0.4"
num-traits = "0.2"
async-trait = "0.1"
wide = "0.7"
rayon = { version = "1", optional = true }
wgpu = { version = "29", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
futures-channel = { version = "0.3", optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon", "oqi-quantum/parallel"]
gpu = ["dep:wgpu", "dep:bytemuck", "dep:futures-channel"]

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "backends"
harness = false
